05-services/nodeport-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport
  namespace: dev
  labels:
    app: nginx
spec:
  type: NodePort
  selector:
    app: nginx
    tier: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
      nodePort: 30080
